# MatbuilderSolvers

./: CMakeLists.txt  README.md
cmake/: galois.cmake
src/: main_cplex.cpp  main_expand.cpp  main_glpk.cpp
src/ILP/: ILP.hpp  ILP_def.hpp
src/ILP/backends/: Backend.hpp  CPLEX.cpp  CPLEX.hpp  GLPK.cpp  GLPK.hpp
src/Matbuilder/: Constraints.cpp  Constraints.hpp  Parser.cpp  Parser.hpp  Solver.cpp  Solver.hpp
src/utils/: GFMatrix.cpp  GFMatrix.hpp  main_base.hpp
